added small design changes to the math game website

--- a/website/templates/collect_prize.html
+++ b/website/templates/collect_prize.html
@@ -104,7 +104,7 @@
   }
 </style>
 
-<!-- 🏠 Home Button -->
+<!-- Home Button -->
 <a href="/" class="home-btn">
   <img src="{{ url_for('static', filename='images/home_icon.svg') }}" alt="Home">
 </a>
