--- a/website/templates/math_game.html
+++ b/website/templates/math_game.html
@@ -8,6 +8,10 @@
   }
 </style>
 
+<a href="/" class="home-btn">
+  <img src="{{ url_for('static', filename='images/home_icon.svg') }}" alt="Home">
+</a>
+
 <div class="game-container text-center">
   <h2 class="mb-4">🧮 Math Game</h2>
   
