--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -67,5 +67,8 @@
 
 </div>
 
+<!-- Floating Math Game Button -->
+<a href="/math-game" class="math-game-btn" title="Play Math Game">🧮</a>
+
 
 {% endblock %}
