--- a/website/templates/collect_prize.html
+++ b/website/templates/collect_prize.html
@@ -51,4 +51,11 @@
 </div>
 
 <canvas id="confetti-canvas" style="position:fixed;top:0;left:0;width:100%;height:100%;pointer-events:none;"></canvas>
+
+<script>
+  // Lock scrolling and disable pull-to-refresh
+  document.body.addEventListener('touchmove', e => e.preventDefault(), { passive: false });
+  document.addEventListener('gesturestart', e => e.preventDefault()); // Prevent zooming on iOS
+
+</script>
 {% endblock %}
